[package]
name = "nucleus"
version = "0.0.1"
authors = ["Berkus Decker <berkus+vesper@metta.systems>"]
publish = false
edition = "2021"

[features]
default = []
rpi4 = []

[dependencies]
aarch64-cpu = "9.2"
tock-registers = "0.8.1"

[profile.dev]
opt-level = 's' # otherwise boot code will be mangled

[profile.release]
panic = "abort"
opt-level = 's'
debug = true
lto = true

[profile.test]
opt-level = 's'
debug = true

[[bin]]
name = "nucleus"
