[workspace]
members = [
    "libmemory",
    "machine",
    "nucleus",
    "bin/chainboot",
    "bin/chainofcommand",
    "tools/ttt",
]
resolver = "2"

[patch.crates-io]
serialport = { git = "https://github.com/metta-systems/serialport-rs", branch = "macos-ENOTTY-fix" }

[profile.dev]
# See https://github.com/rust-lang/cargo/issues/7359 about why panic=abort is not working here.
# It is still defined in the target JSON so not stricly necessary to specify it here anyway.
#panic = "abort" # @todo try panic_rtt with feature jlink
opt-level = 's' # otherwise boot code will be mangled

[profile.release]
panic = "abort"
opt-level = 's'
debug = true
lto = true

[profile.test]
opt-level = 's'
debug = true
