[package]
name = "machine"
version = "0.0.1"
authors = ["Berkus Decker <berkus+vesper@metta.systems>"]
description = "Vesper nanokernel shared code library, useful also for the chainboot loader."
documentation = "https://docs.metta.systems/vesper"
homepage = "https://github.com/metta-systems/vesper"
repository = "https://github.com/metta-systems/vesper"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["no-std", "embedded", "os"]
publish = false
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
noserial = []
# Enable JTAG debugging of kernel - enable jtag helpers and
# block waiting for JTAG probe attach at the start of kernel main.
jtag = []
# Build for running under QEMU with semihosting, so various halt/reboot options would for example quit QEMU instead.
qemu = ["rpi3"]
# Mutually exclusive features to choose a target board
rpi3 = []
rpi4 = []

[dependencies]
r0 = "1.0"
qemu-exit = "3.0"
cortex-a = "7.2"
tock-registers = "0.7"
ux = { version = "0.1", default-features = false }
usize_conversions = "0.2"
bit_field = "0.10"
bitflags = "1.3"
cfg-if = "1.0"
snafu = { version = "0.7", default-features = false }
buddy-alloc = { git = "https://github.com/metta-systems/buddy-alloc", version = "0.5.0", branch = "feature/allocator-api" }
once_cell = { version = "1.10.0", default-features = false, features = ["unstable"] }
static_assertions = "1.1.0"
#enum_dispatch = "0.3"
#tap = "1.0" -- check no_std?
shrinkwraprs = { version = "0.3", default-features = false }
#dtb = "0.2" # Dec 2019 by Simon Prikhodko
# Alternatives to dtb to look at:
#device_tree = "1.1.0" # Jun 2016 by Marc Brinkmann
# fdt-rs latest 0.4.3 Jul 2021 by Sean Wilson -- interface is more basic than in dtb
fdt-rs = { version = "0.4", default-features = false }
# @todo Added from_raw_pointer() finally
