[package]
name = "vesper"
version = "0.0.1"
authors = ["Berkus Decker <berkus+vesper@metta.systems>"]
description = "Vesper exokernel"
documentation = "https://docs.metta.systems/vesper"
homepage = "https://github.com/metta-systems/vesper"
repository = "https://github.com/metta-systems/vesper"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["no-std", "embedded", "os"]
publish = false
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
noserial = []
# Enable JTAG debugging of kernel - enable jtag helpers and
# block waiting for JTAG probe attach at the start of kernel main.
jtag = []
# Build for running under QEMU with semihosting, so various halt/reboot options would for example quit QEMU instead.
qemu = ["qemu-exit"]

[dependencies]
r0 = "1.0"
qemu-exit = { version = "2.0", optional = true }
cortex-a = "6.0"
tock-registers = "0.7"
ux = { version = "0.1.3", default-features = false }
usize_conversions = "0.2.0"
bit_field = "0.10.1"
bitflags = "1.2"
cfg-if = "1.0"
snafu = { version = "0.7.0-beta.0", default-features = false }
static_assertions = "1.1.0"
