[package]
name = "nucleus"
version = "0.0.1"
authors = ["Berkus Decker <berkus+vesper@metta.systems>"]
description = "Vesper nanokernel binary"
documentation = "https://docs.metta.systems/vesper"
homepage = "https://github.com/metta-systems/vesper"
repository = "https://github.com/metta-systems/vesper"
readme = "README.md"
license = "BlueOak-1.0.0"
categories = ["no-std", "embedded", "os"]
publish = false
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
noserial = []
# Enable JTAG debugging of kernel - enable jtag helpers and
# block waiting for JTAG probe attach at the start of kernel main.
jtag = []
# Build for running under QEMU with semihosting, so various halt/reboot options would for example quit QEMU instead.
qemu = ["rpi3"]
# Mutually exclusive features to choose a target board
rpi3 = []
rpi4 = []

[dependencies]
qemu-exit = "3.0"
aarch64-cpu = "9.0"
tock-registers = "0.8.1"
ux = { version = "0.1", default-features = false }
usize_conversions = "0.2"
bit_field = "0.10"
bitflags = "1.3"
cfg-if = "1.0"
snafu = { version = "0.7", default-features = false }
buddy-alloc = { git = "https://github.com/metta-systems/buddy-alloc", version = "0.6.0", branch = "feature/allocator-api" }
once_cell = { version = "1.16", default-features = false, features = ["unstable"] }
armv8a_semihosting = { version = "0.0" }
armv8a_panic_semihosting = { version = "0.0", features = ["info"] }

[[bin]]
name = "nucleus"
test = false

#description = "Vesper nanokernel shared code library, useful also for the chainboot loader."
[lib]
name = "machine"
test = true

# TODO: for proper testing we need to build libmachine with test_runner as a binary!
