[package]
name = "ttt"
version = "0.0.1"
authors = ["Berkus Decker <berkus+vesper@metta.systems>"]
description = "Translation tables tool"
license = "BlueOak-1.0.0"
categories = ["no-std", "embedded", "os"]
publish = false
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[features]
rpi3 = ["machine/rpi3"]
rpi4 = ["machine/rpi4"]

[dependencies]
machine = { path = "../../machine" }
clap = "4.4"
colored = "2"
prettytable-rs = "0.10"
goblin = { version = "0.7", default-features = false, features = ["std", "alloc", "elf32", "elf64"] }
anyhow = "1.0"
fehler = "1.0"
bytes = "1.5"
